兼容编译器版本